plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.jetbrains.kotlin.jvm' version '1.9.23'
//    id "io.sentry.jvm.gradle" version "5.5.0"
}

dependencyManagement {
    imports {
        mavenBom "org.jetbrains.kotlin:kotlin-bom:1.9.23"
    }
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    google()
}

dependencies {
    // JPA & Spring Data 관련 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // JWT (io.jsonwebtoken:jjwt)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Spring Boot Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Password 암호화 (BCrypt)
    implementation 'org.springframework.security:spring-security-crypto:6.4.5'

    // Kafka 관련 라이브러리
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.apache.kafka:kafka-streams'

    // Database 관련 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.mysql:mysql-connector-j' // MySQL (로컬/테스트용)
    implementation 'org.postgresql:postgresql' // PostgreSQL (RDS용)
    implementation 'com.h2database:h2' // H2 DB (테스트용)

    // QueryDSL 최신 버전 (5.0.0, Jakarta 버전)
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'

    // QueryDSL 자동 생성 클래스 관련 설정
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 테스트 관련 라이브러리
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'

    // Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Model Mapper
    implementation 'org.modelmapper:modelmapper:3.1.1'

    // 개발 중 자동 리로드 지원
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // sentry 모니터링
    implementation 'io.sentry:sentry-spring-boot-starter:6.0.0'

    // SMTP
    implementation 'org.springframework.boot:spring-boot-starter-mail'
}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorGeneratedSourcesDirectory = file("$buildDir/generated/sources/annotationProcessor/java/main")
}

sourceSets {
    main {
        java {
            srcDirs += "$buildDir/generated/sources/annotationProcessor/java/main"
        }
    }
}

// 테스트는 test 프로파일(H2 인메모리)로 실행되므로 활성화 유지
tasks.named('bootJar') {
    archiveFileName = 'app.jar'
    mainClass = 'com.example.ezpay.EzPayApplication' // ✅ 실제 Application 클래스 경로로 수정
}

//sentry {
//    includeSourceContext = true
//    org = "soyounjeong"
//    projectName = "java-spring-boot"
//    authToken = System.getenv("SENTRY_AUTH_TOKEN")
//
//    autoInstallation {
//        enabled.set(true)
//        sentryVersion.set("8.11.1")
//    }
//}
jar {
    enabled = false
}
